src/objects/Review__c.object
<CustomObject>
    <description>Comments and a rating of a candidate, often after a phone screen or interview.</description>
    <fields>
        <fullName>Application__c</fullName>
        <description>Application for which this review was performed.</description>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipName>Review</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Candidate_Formula__c</fullName>
        <formula>Application__r.Candidate__r.First_Name__c 
&amp; 
&quot; &quot; 
&amp; 
Application__r.Candidate__r.Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Candidate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Candidate__c</fullName>
        <formula>HYPERLINK(
Application__r.Candidate__r.Id,
Application__r.Candidate__r.First_Name__c
&amp;
&quot; &quot;
&amp;
Application__r.Candidate__r.Last_Name__c)</formula>
        <label>Candidate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commentor_Formula__c</fullName>
        <formula>Commentor__r.First_Name__c
&amp; 
&quot; &quot; 
&amp; 
Commentor__r.Last_Name__c</formula>
        <label>Commentor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commentor__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>User of authenticated sites.</description>
        <label>Commentor</label>
        <referenceTo>Commentor__c</referenceTo>
        <relationshipName>Review</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Comments about a candidate.</description>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Culture_Rating__c</fullName>
        <description>Rating on a scale of 1 (worst)  to 4 (best).</description>
        <label>Culture Rating</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interview_Datetime__c</fullName>
        <label>Interview Date/Time (PST)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Interview_Duration__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Interview Duration (hour)</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interview_Location__c</fullName>
        <label>Interview Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interview__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Interview</label>
        <referenceTo>Interview__c</referenceTo>
        <relationshipLabel>Sessions</relationshipLabel>
        <relationshipName>Review</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <formula>Application__r.Position__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Position</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technical_Rating__c</fullName>
        <description>Rating of an applicant&apos;s technical skills from 1 (worst) to 4 (best).</description>
        <label>Technical Rating</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Session</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Candidate__c</columns>
        <columns>Application__c</columns>
        <columns>Interview__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Assigned_Reviews</fullName>
        <columns>NAME</columns>
        <columns>Application__c</columns>
        <columns>Candidate__c</columns>
        <columns>Interview__c</columns>
        <columns>Comments__c</columns>
        <columns>Commentor__c</columns>
        <columns>Commentor_Formula__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Commentor__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Assigned Reviews</label>
    </listViews>
    <listViews>
        <fullName>New_Review</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>Candidate__c</columns>
        <columns>Position__c</columns>
        <columns>Interview__c</columns>
        <columns>Commentor__c</columns>
        <columns>Comments__c</columns>
        <columns>Culture_Rating__c</columns>
        <columns>Technical_Rating__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>lessOrEqual</operation>
            <value>NEXT_WEEK</value>
        </filters>
        <label>New Review</label>
    </listViews>
    <nameField>
        <displayFormat>R-{000000}</displayFormat>
        <label>ReviewID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sessions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Rating_Scale_Rule</fullName>
        <active>true</active>
        <description>Rating must be from 1 to 5.</description>
        <errorConditionFormula>(Culture_Rating__c &lt;1 || Culture_Rating__c &gt; 5)</errorConditionFormula>
        <errorDisplayField>Culture_Rating__c</errorDisplayField>
        <errorMessage>Invalid rating. Rating must be
from 1 to 5.</errorMessage>
    </validationRules>
</CustomObject>